tests/ui/associated-type-bounds/ice-escaping-bound-vars-132055.stderr
error[E0106]: missing lifetime specifier
 --> $DIR/ice-escaping-bound-vars-132055.rs:12:12
  |
LL | fn foo<T: A<method(..): Send>>() {}
  |            ^ expected named lifetime parameter
  |
  = note: for more information on higher-ranked polymorphism, visit https://doc.rust-lang.org/nomicon/hrtb.html
help: consider making the bound lifetime-generic with a new `'a` lifetime
  |
LL | fn foo<T: for<'a> A<'a, method(..): Send>>() {}
  |           +++++++   +++
help: consider introducing a named lifetime parameter
  |
LL | fn foo<'a, T: A<'a, method(..): Send>>() {}
  |        +++      +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0106`.
